Adds auther to package.json.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mqtesting",
   "description": "Testing MQs",
   "private" : true,
-  "author": "",
+  "author": "Brian Link",
   "version": "0.0.0",
   "repository": {
     "url": ""
