--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "optimist": "~0.3.1",
     "charm": "~0.0.6",
     "easy-table": "~0.0.2",
-    "rabbit.js": "~0.2.0",
+    "rabbit.js": "git+https://github.com/cantina/rabbit.js.git",
     "zmq": "~2.0.3",
     "stomp-client": "~0.2.3",
     "dnode": "~0.9.10",
