--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "optimist": "~0.3.1",
     "charm": "~0.0.6",
     "easy-table": "~0.0.2",
-    "rabbit.js": "git+https://github.com/cantina/rabbit.js.git",
+    "rabbit.js": "git+ssh://git@github.com:cantina/rabbit.js.git",
     "zmq": "~2.0.3",
     "stomp-client": "~0.2.3",
     "dnode": "~0.9.10",
     "redis": "~0.7.1",
     "hiredis": "~0.1.14",
-    "amqp": "git+https://github.com/cantina/node-amqp.git"
+    "amqp": "git+ssh://git@github.com:cantina/node-amqp.git",
+    "cantina-core": "git+ssh://git@github.com:cantina/cantina-core.git"
   },
   "devDependencies": {},
   "optionalDependencies": {},
