Updates to cantina-service and adds rabbit rep/req tests.

--- a/reqrep/http/package.json
+++ b/reqrep/http/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "bouncy": "*",
     "optimist": "*",
-    "cantina-core": "git+ssh://git@github.com:cantina/cantina-core.git"
+    "cantina-service": "git+ssh://git@github.com:cantina/cantina-service.git"
   },
   "devDependencies": {},
   "optionalDependencies": {},
