--- a/reqrep/rabbitmq/package.json
+++ b/reqrep/rabbitmq/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "dependencies": {
     "optimist": "*",
-    "cantina-core": "git+ssh://git@github.com:cantina/cantina-core.git"
+    "cantina-service": "git+ssh://git@github.com:cantina/cantina-service.git"
   },
   "devDependencies": {},
   "optionalDependencies": {},
