--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "redis": "~0.7.1",
     "hiredis": "~0.1.14",
     "amqp": "git+ssh://git@github.com:cantina/node-amqp.git",
-    "cantina-core": "git+ssh://git@github.com:cantina/cantina-core.git"
+    "cantina-service": "git+ssh://git@github.com:cantina/cantina-service.git"
   },
   "devDependencies": {},
   "optionalDependencies": {},
